--- a/page14.html
+++ b/page14.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -23,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-2j" data-rv-view="351">
+  <section id="menu-2j" data-rv-view="332">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -56,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-2l" data-rv-view="355" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-2l" data-rv-view="336" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -71,7 +72,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2m" data-rv-view="358" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-2m" data-rv-view="339" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -82,7 +83,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-2n" data-rv-view="360" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-2n" data-rv-view="341" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -99,7 +100,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2o" data-rv-view="362" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-2o" data-rv-view="343" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -113,7 +114,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-2p" data-rv-view="364" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-2p" data-rv-view="345" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -124,7 +125,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2q" data-rv-view="366" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section article mbr-section__container" id="content1-2q" data-rv-view="347" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
 
     <div class="container">
         <div class="row">
@@ -139,7 +140,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-2s" data-rv-view="368" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-section mbr-section__container" id="image2-2s" data-rv-view="349" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -156,7 +157,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2r" data-rv-view="370" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-2r" data-rv-view="351" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -168,7 +169,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2k" data-rv-view="353" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2k" data-rv-view="334" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
@@ -179,8 +180,8 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
