--- a/page55.html
+++ b/page55.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -23,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-hb" data-rv-view="1351">
+  <section id="menu-hb" data-rv-view="1342">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -56,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-hd" data-rv-view="1355" style="background-image: url(assets/images/mbr-1-1618x1080.jpg); padding-top: 240px; padding-bottom: 240px;">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-hd" data-rv-view="1346" style="background-image: url(assets/images/mbr-1-1618x1080.jpg); padding-top: 240px; padding-bottom: 240px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -91,7 +92,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-he" data-rv-view="1358" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-he" data-rv-view="1349" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -127,7 +128,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-hc" data-rv-view="1353" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-hc" data-rv-view="1344" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
@@ -139,10 +140,10 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/jarallax/jarallax.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
