--- a/page61.html
+++ b/page61.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -23,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-jn" data-rv-view="1652">
+  <section id="menu-jn" data-rv-view="1643">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -56,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials4-js" data-rv-view="1654" style="background-image: url(assets/images/mbr-1920x1310.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/b">create your own site</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials4-js" data-rv-view="1645" style="background-image: url(assets/images/mbr-1920x1310.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);">
     </div>
@@ -96,7 +97,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background" id="header1-jp" data-rv-view="1661" style="background-image: url(assets/images/mbr-1920x954.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background" id="header1-jp" data-rv-view="1652" style="background-image: url(assets/images/mbr-1920x954.jpg);">
 
     
 
@@ -120,7 +121,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="testimonials4-jq" data-rv-view="1664" style="background-image: url(assets/images/mbr-1920x1404.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="testimonials4-jq" data-rv-view="1655" style="background-image: url(assets/images/mbr-1920x1404.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);">
     </div>
@@ -160,7 +161,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-jr" data-rv-view="1669" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-jr" data-rv-view="1660" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -178,7 +179,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-jo" data-rv-view="1659" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-jo" data-rv-view="1650" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
@@ -190,10 +191,10 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/jarallax/jarallax.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
