--- a/page35.html
+++ b/page35.html
@@ -9,11 +9,12 @@
   <link rel="shortcut icon" href="assets/images/20988002-1378120402302790-1549326759-n-2-130x128.png" type="image/x-icon">
   <meta name="description" content="Web Site Builder Description">
   <title>Testing</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -23,9 +24,9 @@
   
 </head>
 <body>
-  <div id="menu-bq" custom-code="true" data-rv-view="826"></div>
+  <div id="menu-bq" custom-code="true" data-rv-view="817"></div>
 
-<section class="mbr-section form1 mbr-after-navbar" id="form1-fe" data-rv-view="829" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section form1 mbr-after-navbar" id="form1-fe" data-rv-view="820" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -50,7 +51,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CENTSADAY">
 
-                        <input type="hidden" value="gRKxvl0Lgjm31CSQk79Scos0NWKU8o2r6gg/Dfaib/2x/u8IIAvg7GugeC+AKsomTcTy1OMREpth+jJKWdpp1ExeMqu4l1DL8Upft6SVdTRuX59U0zsFjKuGGYyXjkpT" data-form-email="true">
+                        <input type="hidden" value="2e3e5ogXBiaYSXNmFXGIb9ABsSFcuOxBFQ+rgqXtAhFT7zIsNoLZ2upKLBbSy/6RUPKewkqhaBUF0k02yKgs5fyXTTLFmUYqMcR+abCWyQk8ecZVpjbK4PAcs2/k2JvM" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -91,7 +92,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="827" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="818" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
@@ -103,9 +104,9 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
