--- a/page37.html
+++ b/page37.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -24,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-cu" data-rv-view="961">
+  <section id="menu-cu" data-rv-view="952">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader11 mbr-after-navbar" id="extHeader11-d2" data-rv-view="965" style="background-image: url(assets/images/fotojet-8-1000x667.jpg);">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader11 mbr-after-navbar" id="extHeader11-d2" data-rv-view="956" style="background-image: url(assets/images/fotojet-8-1000x667.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(0, 0, 0);">
     </div>
@@ -83,7 +84,7 @@
     <div class="mbr-arrow mbr-arrow-floating hidden-sm-down" aria-hidden="true"><a href="#content1-cx"><i class="mbr-arrow-icon"></i></a></div>                 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-cx" data-rv-view="968" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-cx" data-rv-view="959" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -93,7 +94,7 @@
 
 </section>
 
-<section class="mbr-section" id="msg-box5-d6" data-rv-view="970" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section" id="msg-box5-d6" data-rv-view="961" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -123,7 +124,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-cz" data-rv-view="973" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-cz" data-rv-view="964" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -133,7 +134,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-d0" data-rv-view="975" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-d0" data-rv-view="966" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -144,7 +145,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-d1" data-rv-view="977" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-d1" data-rv-view="968" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -154,7 +155,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-cv" data-rv-view="963" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-cv" data-rv-view="954" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
@@ -165,8 +166,8 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/typed/typed.min.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
