--- a/page41.html
+++ b/page41.html
@@ -13,18 +13,19 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
-  <link rel="stylesheet" href="assets/mobirise3-blocks-plugin/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/mobirise3-blocks-plugin/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
 </head>
 <body>
-  <section id="menu-dw" data-rv-view="1089">
+  <section id="menu-dw" data-rv-view="1080">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader17 mbr-after-navbar" id="extHeader17-e1" data-rv-view="1093" style="background-image: url(assets/images/img-extheader17-bg.jpg);">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader17 mbr-after-navbar" id="extHeader17-e1" data-rv-view="1084" style="background-image: url(assets/images/img-extheader17-bg.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -81,7 +82,7 @@
     <div class="mbr-arrow mbr-arrow-floating hidden-sm-down" aria-hidden="true"><a href="#content1-dz"><i class="mbr-arrow-icon"></i></a></div>                 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-dz" data-rv-view="1096" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-dz" data-rv-view="1087" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -91,7 +92,7 @@
 
 </section>
 
-<section class="mbr-section extCountdown1" id="extCountdown1-e0" data-rv-view="1098" style="background-color: rgb(145, 189, 174); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section extCountdown1" id="extCountdown1-e0" data-rv-view="1089" style="background-color: rgb(145, 189, 174); padding-top: 120px; padding-bottom: 120px;">
 
     
 
@@ -101,7 +102,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-dx" data-rv-view="1091" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-dx" data-rv-view="1082" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
@@ -112,14 +113,14 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/typed/typed.min.js"></script>
-  <script src="assets/countdown/jquery.countdown.min.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
-  <script src="assets/mobirise3-blocks-plugin/js/script.js"></script>
+  <script src="assets/typed/typed.min.js"></script>
+  <script src="assets/countdown/jquery.countdown.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="assets/mobirise3-blocks-plugin/js/script.js"></script>
   
   
   <input name="animation" type="hidden">
