--- a/page48.html
+++ b/page48.html
@@ -9,22 +9,23 @@
   <link rel="shortcut icon" href="assets/images/20988002-1378120402302790-1549326759-n-2-130x128.png" type="image/x-icon">
   <meta name="description" content="An article on the stresses of the IB that no one talks about and how to handle them">
   <title>Unspoken Stresses of the IB</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
-  <link rel="stylesheet" href="assets/mobirise3-blocks-plugin/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/mobirise3-blocks-plugin/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
 </head>
 <body>
-  <section id="menu-g3" data-rv-view="1238">
+  <section id="menu-g3" data-rv-view="1229">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader12 tab-content mbr-after-navbar" id="extHeader12-g5" data-rv-view="1242" style="background-color: rgb(145, 189, 174);">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader12 tab-content mbr-after-navbar" id="extHeader12-g5" data-rv-view="1233" style="background-color: rgb(145, 189, 174);">
 
      
     <div class="mbr-table mbr-table-full">
@@ -98,7 +99,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-g6" data-rv-view="1245" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-g6" data-rv-view="1236" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -109,7 +110,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-g7" data-rv-view="1247" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-g7" data-rv-view="1238" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -120,7 +121,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-g8" data-rv-view="1249" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-g8" data-rv-view="1240" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -135,7 +136,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-g4" data-rv-view="1240" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-g4" data-rv-view="1231" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
@@ -147,11 +148,11 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
-  <script src="assets/mobirise3-blocks-plugin/js/script.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="assets/mobirise3-blocks-plugin/js/script.js"></script>
   
   
   <input name="animation" type="hidden">
