--- a/page51.html
+++ b/page51.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -23,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-gp" data-rv-view="1310">
+  <section id="menu-gp" data-rv-view="1301">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -56,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site creator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-gt" data-rv-view="1314" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-gt" data-rv-view="1305" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -90,7 +91,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-gs" data-rv-view="1317" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-gs" data-rv-view="1308" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -100,7 +101,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gq" data-rv-view="1312" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gq" data-rv-view="1303" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
@@ -111,8 +112,8 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
