--- a/page57.html
+++ b/page57.html
@@ -13,18 +13,19 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
-  <link rel="stylesheet" href="assets/mobirise3-blocks-plugin/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/mobirise3-blocks-plugin/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
 </head>
 <body>
-  <section id="menu-i1" data-rv-view="1469">
+  <section id="menu-i1" data-rv-view="1460">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader16 mbr-after-navbar" id="extHeader16-i3" data-rv-view="1473" style="background-image: url(assets/images/mbr-840x1080.jpg);">
+<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader16 mbr-after-navbar" id="extHeader16-i3" data-rv-view="1464" style="background-image: url(assets/images/mbr-840x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -83,7 +84,7 @@
                      
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-i4" data-rv-view="1480" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-i4" data-rv-view="1471" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -97,7 +98,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-i2" data-rv-view="1471" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-i2" data-rv-view="1462" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
@@ -108,14 +109,14 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/countdown/jquery.countdown.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/typed/typed.min.js"></script>
-  <script src="assets/mobirise3-blocks-plugin/js/script.js"></script>
+  <script src="assets/countdown/jquery.countdown.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="assets/mobirise3-blocks-plugin/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
   
