--- a/page52.html
+++ b/page52.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section extMsg-box1 tab-content mbr-after-navbar" id="extMsg-box1-gy" data-rv-view="1310" style="padding-top: 100px; padding-bottom: 50px;">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section extMsg-box1 tab-content mbr-after-navbar" id="extMsg-box1-gy" data-rv-view="1310" style="padding-top: 100px; padding-bottom: 50px;">
 
     
     <div class="bgText">
