--- a/Comedy.html
+++ b/Comedy.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-d7" data-rv-view="198" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-d7" data-rv-view="198" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -101,9 +101,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">Weekly Story Episode</h3>
-                <div class="lead"><p><span style="font-size: 1.07rem;">Click here to find chapters of a story written weekly by an STJ Student.</span><br></p></div>
-                <div><a class="btn btn-danger" href="page17.html">Click Here</a></div>
+                <h3 class="mbr-section-title display-2">Podcasts</h3>
+                <div class="lead"><p><span style="font-size: 1.07rem;">Click here for Isaiah Lowney's AnotherThingComing podcast series</span><br></p></div>
+                <div><a class="btn btn-danger" href="page70.html">Click Here</a></div>
             </div>
         </div>
     </div>
