--- a/Comedy.html
+++ b/Comedy.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-d7" data-rv-view="198" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-d7" data-rv-view="198" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -102,7 +102,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">Podcasts</h3>
-                <div class="lead"><p><span style="font-size: 1.07rem;">Click here for Isaiah Lowney's AnotherThingComing podcast series</span><br></p></div>
+                <div class="lead"><p><span style="font-size: 1.07rem;">Click here for Isaiah Lowney's OtherThingComing podcast series</span><br></p></div>
                 <div><a class="btn btn-danger" href="page70.html">Click Here</a></div>
             </div>
         </div>
